samples/_failures_safe/1761657027_6f7b4e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_609f8448.c: In function ‘BFS’:
./samples/SAFE/__tmp_609f8448.c:185:42: error: expected ‘;’ at end of input
  185 |                             queue[rear++]
      |                                          ^
      |                                          ;
./samples/SAFE/__tmp_609f8448.c:185:29: error: expected declaration or statement at end of input
  185 |                             queue[rear++]
      |                             ^~~~~
./samples/SAFE/__tmp_609f8448.c:185:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_609f8448.c:185:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_609f8448.c:185:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_609f8448.c:185:29: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_609f8448.c:185:29: error: expected declaration or statement at end of input
